// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Footer /> > displays "Limit reached" message when remaining is 0 1`] = `
" workspace (/directory)                                         sandbox       /model        /agent                quota
 ~/project/foo/bar/and/some/more/directories/to/make/it/long    no sandbox    gemini-pro    gemini-cli    limit reached
"
`;

exports[`<Footer /> > displays the usage indicator when usage is low 1`] = `
" workspace (/directory)                                          sandbox         /model         /agent            quota
 ~/project/foo/bar/and/some/more/directories/to/make/it/long     no sandbox      gemini-pro     gemini-cli     85% used
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer in narrow terminal (baseline narrow) > complete-footer-narrow 1`] = `
" workspace (/directory)       sandbox       /model       context        /agent
 ...tories/to/make/it/long    no sandbox    gemini-pro   14%        gemini-cli
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer with all sections visible (baseline) > complete-footer-wide 1`] = `
" workspace (/directory)                                          sandbox         /model         context          /agent
 ~/project/foo/bar/and/some/more/directories/to/make/it/long     no sandbox      gemini-pro     14% used     gemini-cli
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with CWD and model info hidden to test alignment (only sandbox visible) > footer-only-sandbox 1`] = `
" sandbox                                                                                                         /agent
 no sandbox                                                                                                  gemini-cli
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with all optional sections hidden (minimal footer) > footer-minimal 1`] = `
" /agent
 gemini-cli
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with only model info hidden (partial filtering) > footer-no-model 1`] = `
" workspace (/directory)                                                         sandbox                          /agent
 ~/project/foo/bar/and/some/more/directories/to/make/it/long                    no sandbox                   gemini-cli
"
`;

exports[`<Footer /> > hides the usage indicator when usage is not near limit 1`] = `
" workspace (/directory)                                          sandbox         /model         /agent            quota
 ~/project/foo/bar/and/some/more/directories/to/make/it/long     no sandbox      gemini-pro     gemini-cli     15% used
"
`;
